--- a/src/main/resources/templates/admin/hoc-sinh-chi-tiet-lop-hoc.html
+++ b/src/main/resources/templates/admin/hoc-sinh-chi-tiet-lop-hoc.html
@@ -11,6 +11,50 @@
 
 </div>
 <div>Danh sách lớp học</div>
+<div class="dslop">
+    <div>lop 1</div>
+    <div>lop 2</div>
+</div>
 
+
+<div class="ngay hoc">
+    <button>ngay hoc 1</button>
+    <button>ngay hoc 2</button>
+    <button>ngay hoc 3</button>
+    <button>ngay hoc 4</button>
+    <button>ngay hoc 5</button>
+</div>
+
+
+<div>
+    <div class="hocsinhbl">
+        <div>hoc sinh 1</div>
+        <input type="text">
+        <button>save</button>
+
+    </div>
+    <div class="hocsinhbl">
+        <div>hoc sinh 1</div>
+        <input type="text">
+        <button>save</button>
+
+    </div>
+
+    <div class="hocsinhbl">
+        <div>hoc sinh 1</div>
+        <input type="text">
+        <button>save</button>
+
+    </div>
+
+    <div class="hocsinhbl">
+        <div>hoc sinh 1</div>
+        <input type="text">
+        <button>save</button>
+
+    </div>
+
+   
+</div>
 </body>
 </html>
