--- a/src/main/resources/templates/admin/lophoc.html
+++ b/src/main/resources/templates/admin/lophoc.html
@@ -136,6 +136,10 @@
         <div class="title">Số điện thoại</div>
         <input ng-model="form.soDienThoai" type="text" name="" id="">
 
+        <div class="title">Khóa học</div>
+        <select id="khoahoc">
+            <option ng-repeat="item in kh" value="{{item.makhoa}}"> {{item.tenkhoa}}</option>
+        </select>
 
 
 
@@ -229,17 +233,15 @@
 
 </div>
 <div class="dskhoahoc">
-    <a href=""><div>TA0D-khóa cơ bản</div></a>
-    <a href=""><div>TA0D-khóa nâng cao</div></a>
-    <a href=""><div>TA0D-khóa cơ bản</div></a>
-    <a href=""><div>TA0D-khóa cơ bản</div></a>
-    <a href=""><div>TA0D-khóa cơ bản</div></a>
+    <a href="" ng-repeat="item in kh"><div>{{item.tenkhoa}}</div></a>
+
 </div>
 <table STYLE="margin: auto; background-color: #e5e3e3">
     <tr style="border: #efefef 1px solid">
 
         <th>ID</th>
         <th>Mã lớp</th>
+        <th>Mã Khóa Học</th>
         <th>Link tài liệu</th>
         <th>Contact</th>
         <th>Ngày đăng ký</th>
@@ -251,6 +253,7 @@
     <tr ng-repeat="item in items">
         <td>{{item.id|number}}</td>
         <td>{{item.malop}}</td>
+        <td>{{item.makh}}</td>
         <td>{{item.linkTaiLieu}}</td>
         <td>{{item.createDate|date:'dd-MM-yyyy'}}</td>
         <td>{{item.available?'yes':'no'}}</td>
@@ -293,122 +296,7 @@
 
 </div>
 <div style="height: 100px"></div>
-<script>
-    var app = angular.module("adapp", ["ngRoute"]);
-    app.config(function($routeProvider) {
-        $routeProvider
-            .when("/product", {
-                templateUrl : "_product.html",
-                controller:"product-ctrl"
-            })
-            .when("/au", {
-                templateUrl : "/admin/au/index.html",
-                controller:"auhtority-ctrl"
-            })
-            .when("/unau", {
-                templateUrl : "/admin/au/unau.html",
-                controller:"authority-ctrl"
-            })
-            .otherwise({
-                template:"<h1>web ban hang java6</h1>"
-            })
-    });
 
-    app.controller("product-ctrl",function($scope,$http){
-
-        $scope.items=[];
-        $scope.form={};
-        $scope.cates=[];
-        $scope.initialize=function(){
-            $http.get("http://localhost:8080/rest/lophoc").then(resp=>{
-                $scope.items=resp.data;
-                $scope.items.forEach(item=>{
-
-                    item.createDate = new Date(item.createDate)
-                    console.log(item)
-                })
-            });
-            $http.get("http://localhost:8080/rest/lophoc").then(resp=>{
-                $scope.cates=resp.data;
-
-
-            });
-
-
-
-
-
-        }
-        $scope.initialize();
-
-        $scope.reset=function(){
-            $scope.form={
-                createDate:new Date()
-            }
-
-
-        }
-
-        $scope.edit=function(item){
-            $scope.form=angular.copy(item);
-
-
-
-        }
-
-        $scope.delete=function(item){
-            alert("Delete")
-            $http.delete(`http://localhost:8080/rest/lophoc/${item.id}`).then(resp=>{
-                var index=$scope.items.findIndex(p=>p.id==item.id);
-                $scope.items.splice(index,1);
-                alert("xoa thanh cong")
-                console.log(resp.data)
-            });
-        }
-
-        $scope.create=function(){
-
-            var item = angular.copy($scope.form);
-            $http.post("http://localhost:8080/rest/lophoc",item).then(resp=>{
-
-                resp.createDate = new Date(resp.data.createDate)
-                $scope.items.push(resp.data);
-                alert("them thanh cong")
-                console.log(resp.data)
-            });
-        }
-
-        $scope.update=function(){
-            alert("updata")
-            var item = angular.copy($scope.form);
-            $http.put(`http://localhost:8080/rest/lophoc/${item.id}`,item).then(resp=>{
-                var index=$scope.items.findIndex(p=>p.id==item.id);
-                $scope.items[index]=item;
-                $scope.items.push(resp.data);
-                alert("updata thanh cong")
-                console.log(resp.data)
-            });
-        }
-
-        $scope.imagechange=function(files){
-            var data = new FormData();
-            data.append('file',files[0])
-            $http.post(`http://localhost:8080/rest/up/images`,data,{
-                transformRequest: angular.identity,
-                headers:{'Content-Type':undefined}
-            }).then(resp=>{
-                $scope.form.image = resp.data.name;
-
-            }).catch(error=>{
-                alert("up hinh loi")
-                console.log("loi la",error)
-            })
-
-        }
-
-
-    })
-</script>
 <script language="javascript">
     var app = angular.module("adapp", ["ngRoute"]);
     app.config(function($routeProvider) {
@@ -431,10 +319,19 @@
     });
 
     app.controller("product-ctrl",function($scope,$http){
-        alert("Quản lý Học Viên")
+
         $scope.items=[];
         $scope.form={};
         $scope.cates=[];
+
+        $scope.kh=[];
+        $http.get("/rest/kh").then(resp=>{
+            $scope.kh=resp.data;
+
+        });
+
+
+
         $scope.initialize=function(){
             $http.get("http://localhost:8080/rest/lophoc").then(resp=>{
                 $scope.items=resp.data;
@@ -449,11 +346,6 @@
 
 
             });
-
-
-
-
-
         }
         $scope.initialize();
 
@@ -486,8 +378,11 @@
         }
 
         $scope.create=function(){
-            alert("create")
+
             var item = angular.copy($scope.form);
+            item.makh = document.getElementById("khoahoc").value;
+            console.log("e",item)
+
             $http.post("http://localhost:8080/rest/lophoc",item).then(resp=>{
 
                 resp.createDate = new Date(resp.data.createDate)
